# aco-resource-optimization

./: .gitignore  README.md  pyproject.toml
docs/: aco_agro.md  acor_eletrica.md
src/: aco_agro.py  aco_eletrica.py  aco_x2.py
